# ai-monitor

./: .dockerignore  .env.example  .gitignore  .impeccable.md  DEV.md  Dockerfile  Dockerfile.client  README.md  compose.yml  pyproject.toml
.github/workflows/: publish-image.yml
ai_monitor/: __init__.py  auth.py  cli.py  config.py  machines.py
ai_monitor/db/: __init__.py  queries.py  schema.py
ai_monitor/ingestion/: __init__.py  base.py  models.py  path_utils.py  service.py  snapshots.py
ai_monitor/ingestion/providers/: __init__.py  claude.py  codex.py
ai_monitor/server/: __init__.py  admin_routes.py  app.py  client_setup.py  ingest_routes.py  routes.py
ai_monitor/server/static/: app.css  app.js
ai_monitor/server/templates/: index.html
docs/superpowers/plans/: 2026-04-13-ai-usage-dashboard.md  2026-04-13-summary-and-heatmap.md  2026-04-14-multi-machine-auth.md  2026-04-16-client-docker-sync.md  2026-04-16-dotenv-docker-ghcr.md
docs/superpowers/specs/: 2026-04-13-ai-usage-dashboard-design.md  2026-04-13-summary-and-heatmap-design.md  2026-04-14-multi-machine-auth-design.md  2026-04-16-client-docker-sync-design.md  2026-04-16-dotenv-docker-ghcr-design.md
scripts/: run-client-sync.sh
tests/: conftest.py  test_cli.py  test_config_env.py
tests/db/: test_queries.py
tests/fixtures/claude/: history.jsonl
tests/ingestion/: test_bootstrap.py  test_claude_provider.py  test_codex_provider.py  test_path_utils.py  test_service.py
tests/server/: test_admin_api.py  test_dashboard.py  test_ingest_api.py  test_metrics_api.py
(+2 files in other folders)
